2008-11-24
	* Can back to the original file from Retrieval text chunck (Improve the retreival button).
	  has a bug: can not scroll to the right position.
	
2008-11-23 (as version 0.1.5)
	* Add AddTo/DropFrom Buttons for Code-Category.
	* Improve the display of retrieved coding.
	
2008-11-22
	* change "Add Code Category" Button to popup menu
	* Open selected file by double click.
	* Retrieve coding chuck by double click.
	* Add/rename/delete Buttons for Code-Category.
	
2008-11-21
	* Add WebSearch Case button (for convienence)
	* Add "Add Code Category" Button
	
2008-11-19 (as verion 0.1.4)
	* Add project memo
	* rename of file/free code names
	* reorganize the code for memo(s)
	* Handle Encoding better (use UTF-8 for storage in date base)
	* Add cases category
	
2008-11-01(as version 0.1.3)
	* Add functionality of file/code/coding memo.
	
2008-10-31
	* Add functionality of delete selected code.
	* Add helper functions to show the temp deleted file/code/coding.
	* Add helper functions to delete file/code/coding permanently.
	* Add helper functions to undo the temporary deletion.
	* Minor changes to the database structure, adding memo, owner and date.
	* some minor bugs are fixed.
	* Now, RQDA() will launch when the package is attached.

2008-10-29
	* Add functionality of delete selected file.

2008-5-17
	* Open coding text chunk is added.
	* "Unmark" button works now.
	
2008-5-14
	* Use /R/sysdata.rda to store meta data such as .rqda environment, so no need to generate it in .GlobalEnv.
	* Add RQDA-package.rd in /man.