@@ -252,7 +252,7 @@ CodingMemoButton <- function(label="C2Memo")
 
 
 
-FreeCode_RenameButton <- function(label="Rename",CodeNamesWidget=.codes_rqda,...)
+FreeCode_RenameButton <- function(label="Rename",CodeNamesWidget=.rqda$.codes_rqda,...)
 {
   ## rename of selected file.
   gbutton(label,handler=function(h,...) {
