@@ -30,7 +30,7 @@
 a package for Qualitative Data Analysis built upon <A HREF="http://www.r-project.org/">R</A>,
 a </SPAN></FONT><FONT FACE="Times New Roman, serif"><SPAN LANG="en-US"><B>free</B></SPAN></FONT><FONT FACE="Times New Roman, serif"><SPAN LANG="en-US">
 qualitative analysis software application. It works both on the
-Windows and Linux/<A HREF="http://www.freebsd.org/">FreeBSD</A>
+Windows, Linux/<A HREF="http://www.freebsd.org/">FreeBSD</A> and MacOS
 platforms. </SPAN></FONT><STRONG><FONT FACE="Times New Roman, serif"><SPAN LANG="en-US"><SPAN STYLE="font-weight: normal">RQDA</SPAN></SPAN></FONT></STRONG><FONT FACE="Times New Roman, serif"><SPAN LANG="en-US">
 </SPAN></FONT><FONT FACE="Times New Roman, serif"><SPAN LANG="en-US"><SPAN STYLE="font-weight: normal">i</SPAN></SPAN></FONT><FONT FACE="Times New Roman, serif"><SPAN LANG="en-US">s
 an easy-to-use tool to assist in the analysis of textual data. At the
@@ -74,7 +74,8 @@ order to use RQDA.
 download R and install it. For Linux and BSD users, you can download
 binary version of R or the sources. For Windows users, you can
 download the binary version of R from the <A HREF="http://cran.r-project.org/bin/windows/base/">download
-page</A>. More instruction about installing R is in the <A HREF="http://cran.r-project.org/doc/manuals/R-admin.html">R
+page</A>. For MacOS users, download the binary version of R from the <A HREF="http://cran.r-project.org/bin/macosx/">download
+page</A>, More instruction about installing R is in the <A HREF="http://cran.r-project.org/doc/manuals/R-admin.html">R
 Installation and Administration</A> Manual.
 
 <li>Launch R (as usual
