@@ -1,6 +1,8 @@
+2008-11-25
+	*Take care of the warning from R CMD check
+	
 2008-11-24
-	* Can back to the original file from Retrieval text chunck (Improve the retreival button).
-	  has a bug: can not scroll to the right position.
+	* Can back to the original file from Retrieved text chunck (by retrieval2 function).
 	
 2008-11-23 (as version 0.1.5)
 	* Add AddTo/DropFrom Buttons for Code-Category.
